# coacheck

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: ci.yml  mirror.yml
coacheck/: __init__.py  _serialize.py  cli.py  parser.py  purity.py  recon.py  redflags.py  report.py
docs/: checks.md
extension/: README.md  background.js  manifest.json
extension/about/: about.html
extension/content/: overlay.js
extension/engine/: parser.js  purity.js  recon.js  redflags.js
extension/ocr/: recognize.js
extension/offscreen/: offscreen.html  offscreen.js
extension/popup/: popup.html  popup.js
extension/shared/: browser-api.js  crop-math.js  render-dom.js
tests/: _helpers.py  test_cli.py  test_parser.py  test_purity.py  test_recon.py  test_redflags.py
tests/fixtures/: coa_clean.txt  coa_implausible_net.txt  coa_low_purity.txt  coa_messy_labels.txt  coa_minimal.txt  coa_missing_batch.txt  coa_missing_lab.txt  coa_no_method.txt
tests/js/: crop-math.test.mjs  engine.test.mjs
tests/web_parity/: cases.json  check.mjs  gen_fixtures.py
