[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coacheck"
version = "0.1.0"
description = "Parse a research peptide Certificate of Analysis, compute real deliverable purity, run a red-flag checklist, and do reconstitution math. Pure stdlib."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Cole Munz" }]
dependencies = []
keywords = ["coa", "certificate-of-analysis", "peptide", "purity", "hplc",
            "reconstitution", "calculator", "parser"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/munzzyy/coacheck"
Issues = "https://github.com/munzzyy/coacheck/issues"

[project.scripts]
coacheck = "coacheck.cli:main"

[tool.setuptools.packages.find]
include = ["coacheck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
